--- a/articles/active-directory/app-proxy/toc.yml
+++ b/articles/active-directory/app-proxy/toc.yml
@@ -111,7 +111,7 @@
           href: ../../active-directory-domain-services/deploy-azure-app-proxy.md?context=%2fazure%2factive-directory%2fapp-proxy%2fcontext%2fapp-proxy-context
         - name: Integración con Power BI
           href: application-proxy-integrate-with-power-bi.md
-        - name: Integración con Cloud App Security
+        - name: Integración con Defender para Cloud Apps
           href: application-proxy-integrate-with-microsoft-cloud-application-security.md
         - name: Integración con el Escritorio remoto
           href: application-proxy-integrate-with-remote-desktop-services.md
