--- a/articles/defender-for-iot/device-builders/TOC.yml
+++ b/articles/defender-for-iot/device-builders/TOC.yml
@@ -1,4 +1,4 @@
-- name: Azure Defender para IoT para creadores de dispositivos
+- name: Microsoft Defender for IoT para generadores de dispositivos
   href: index.yml
   items: null
 - name: Información general
@@ -19,7 +19,7 @@
     - name: Instalación del microagente de Defender para IoT (versión preliminar)
       displayName: 'package, authentication, methods, certificate, authenticate, version'
       href: quickstart-standalone-agent-binary-installation.md
-    - name: Creación de un módulo gemelo del microagente de Defender para IoT (versión preliminar)
+    - name: Creación de un módulo gemelo del microagente de Defender for Cloud (versión preliminar)
       href: quickstart-create-micro-agent-module-twin.md
     - name: Configuración de Defender-IoT-micro-agent para Azure RTOS
       href: quickstart-azure-rtos-security-module.md
@@ -86,7 +86,7 @@
         - name: Línea base
           displayName: 'custom, setting, properties'
           href: concept-baseline.md
-        - name: Línea de base de seguridad de Azure para Azure Defender para IoT
+        - name: Línea base de seguridad de Azure para Microsoft Defender for IoT
           displayName: 'identity management, active directory, privileged access, data protection, incident response, posture, vulnerability, governance'
           href: /security/benchmark/azure/baselines/defender-for-iot-security-baseline?toc=/azure/defender-for-iot/TOC.json
         - name: Agregación de eventos clásicos del microagente de Defender para IoT
@@ -100,10 +100,10 @@
           href: agent-based-recommendations.md
 - name: Guías paso a paso
   items:
-    - name: Conexión a Azure Sentinel
+    - name: "Conexión a Microsoft\_Azure\_Sentinel"
       displayName: 'log analytics, service notes'
       href: how-to-configure-with-sentinel.md
-    - name: Configuración de una solución basada en agente de Azure Defender para IoT
+    - name: Configuración de soluciones basadas en agente de Microsoft Defender for IoT
       displayName: 'data, collection, geolocation, log analytics, raw events'
       href: how-to-configure-agent-based-solution.md
     - name: Investigación de la recomendación de puntos de referencia de CIS
@@ -134,7 +134,7 @@
               href: how-to-deploy-linux-c.md
         - name: Solución de problemas de un agente de seguridad
           items:
-            - name: Solución de problemas de un agente de seguridad de Linux de Azure Defender para IoT
+            - name: Solución de problemas de un agente de seguridad de Linux de Microsoft Defender for IoT
               href: troubleshoot-agent.md
             - name: Configuración local en C
               href: azure-iot-security-local-configuration-c.md
@@ -155,7 +155,7 @@
           href: how-to-investigate-device.md
     - name: Solución de problemas
       items:
-        - name: Solución de problemas de microagente de Defender IoT (versión preliminar)
+        - name: Solución de problemas del microagente de IoT para Defender for Cloud (versión preliminar)
           displayName: 'service status, review logs'
           href: troubleshoot-defender-micro-agent.md
 - name: Referencia
@@ -179,8 +179,8 @@
   items:
     - name: Creación de las aptitudes de seguridad con Microsoft Learn
       href: /learn/browse/?term=securityS&terms=securityS
-    - name: Documentación de Azure Security Center
-      href: ../../security-center/
+    - name: Documentación de Microsoft Defender for Cloud
+      href: ../../defender-for-cloud/
     - name: Documentación de Azure Security Center
       href: ../../security/index.yml
     - name: 'Blog sobre seguridad, privacidad y cumplimiento de Azure IoT'
