--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -397,7 +397,7 @@
           href: monitor-logic-apps.md
         - name: Supervisión de aplicaciones lógicas con los registros de Azure Monitor
           href: monitor-logic-apps-log-analytics.md
-        - name: Supervisión de aplicaciones lógicas en Azure Security Center
+        - name: Supervisión de aplicaciones lógicas en Microsoft Defender for Cloud
           href: healthy-unhealthy-resource.md
         - name: Supervisión de mensajes B2B con los registros de Azure Monitor
           href: monitor-b2b-messages-log-analytics.md
@@ -487,6 +487,6 @@
     - name: Twitter
       href: 'https://twitter.com/logicappsio'
     - name: Proporcionar comentarios sobre el producto
-      href: 'https://feedback.azure.com/forums/287593-logic-apps'
+      href: 'https://feedback.azure.com/d365community/forum/cb47c115-7926-ec11-b6e6-000d3a4f032c'
     - name: Actualizaciones del servicio
       href: 'https://azure.microsoft.com/updates/?product=logic-apps'
