--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -208,8 +208,10 @@
               items:
                 - name: Azure portal
                   href: flexible-server/how-to-restore-server-portal.md
-                - name: CLI de Azure
+                - name: Azure CLI
                   href: flexible-server/how-to-restore-server-cli.md
+            - name: Restauración de un servidor eliminado
+              href: flexible-server/how-to-restore-dropped-server.md
         - name: Solucionar problemas
           items:
             - name: Solución de errores de conexión
@@ -350,7 +352,7 @@
               items:
                 - name: Configuración de SSL
                   href: concepts-ssl-connection-security.md
-            - name: Protección contra amenazas con Azure Defender
+            - name: Administración de Microsoft Defender for Cloud
               href: ../security-center/defender-for-databases-usage.md?toc=/azure/mysql/toc.json&bc=/azure/mysql/breadcrumb/toc.json
             - name: Cifrado en reposo
               items:
