--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -352,9 +352,9 @@
           href: /power-bi/desktop-sap-bw-connector
         - name: Azure Data Factory ofrece integración de datos de SAP HANA y Business Warehouse
           href: 'https://azure.microsoft.com/blog/azure-data-factory-offer-sap-hana-and-business-warehouse-data-integration'
-    - name: Supervisión de amenazas con Azure Sentinel
+    - name: Supervisión de amenazas con Microsoft Azure Sentinel
       items:
-        - name: Implementación de la solución Azure Sentinel para SAP
+        - name: Implementación de la solución Microsoft Azure Sentinel para SAP
           href: ../../../sentinel/sap-deploy-solution.md#deploy-sap-security-content
         - name: Requisitos detallados
           href: ../../../sentinel/sap-solution-detailed-requirements.md
