--- a/articles/zone-pivot-groups.yml
+++ b/articles/zone-pivot-groups.yml
@@ -941,7 +941,7 @@ groups:
   - id: platform-azp
     title: Azure portal
   - id: platform-azcli
-    title: Azure CLI
+    title: CLI de Azure
   - id: platform-net
     title: .NET
   - id: platform-powershell
@@ -1319,9 +1319,9 @@ groups:
   prompt: Elegir una opción.
   pivots:
   - id: identity-mi-methods-azp
-    title: Azure portal
+    title: Azure Portal
   - id: identity-mi-methods-azcli
-    title: Azure CLI
+    title: CLI de Azure
   - id: identity-mi-methods-powershell
     title: PowerShell
   - id: identity-mi-methods-arm
@@ -1333,11 +1333,25 @@ groups:
   prompt: Elegir una opción.
   pivots:
   - id: identity-mi-methods-sub-azp
-    title: Azure portal
+    title: Azure Portal
   - id: identity-mi-methods-sub-azcli
-    title: Azure CLI
+    title: CLI de Azure
   - id: identity-mi-methods-sub-powershell
     title: PowerShell
+- id: programming-languages-set-twenty-eight
+  title: Lenguajes de programación
+  prompt: Selección de un lenguaje de programación
+  pivots:
+  - id: programming-language-csharp
+    title: C#
+  - id: programming-language-cpp
+    title: C++
+  - id: programming-language-java
+    title: Java
+  - id: programming-language-python
+    title: Python
+  - id: programming-language-go
+    title: Go
 - id: iot-dps-set1
   title: Selección de un lenguaje de programación
   prompt: Selección de un lenguaje de programación
@@ -1393,9 +1407,9 @@ groups:
   - id: client-portaltier
     title: Azure Portal
 metadata:
-  ms.openlocfilehash: 871fbc4fe1242f30d1fcb141e8be97be3cb02787
-  ms.sourcegitcommit: 702df701fff4ec6cc39134aa607d023c766adec3
+  ms.openlocfilehash: 97d7281ba21ff3821bb2ed6ff0775c9dad0e0a55
+  ms.sourcegitcommit: 512e6048e9c5a8c9648be6cffe1f3482d6895f24
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/03/2021
-  ms.locfileid: "131466359"
+  ms.lasthandoff: 11/10/2021
+  ms.locfileid: "132156564"
