--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -53,6 +53,7 @@
           href: ../active-directory/develop/v2-app-types.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
         - name: Biblioteca de autenticación
           href: ../active-directory/develop/msal-overview.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
+          displayName: 'MSAL, client library, Microsoft Authentication Library'
     - name: "Procedimientos recomendados de Azure\_AD\_B2C"
       href: best-practices.md
     - name: Tipos de aplicación
@@ -595,6 +596,7 @@
       href: app-registrations-training-guide.md
     - name: Modelo de facturación
       href: billing.md
+      displayName: pricing model
     - name: Ejemplos de código
       href: /samples/browse/?terms=b2c
     - name: Definiciones de cookie
